Update requirements, gitingore necessery files, and settings.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,23 @@ env
 venv
 .venv
 __pycache__
+.vscode
+*.egg-info
+*.egg
+*.log
+*.pid
+*.pyc
+*.sqlite
+*.sql
+*.zip
+__pycache__
+build
+db.sqlite3
+dist
+local_settings.py
+migrations
+pids
+production.py
+staticfiles
+.tox
+.aider.*
